--- a/desktop5.html
+++ b/desktop5.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <ul>
-        <li><a href="./loveme.html">&lt;3</a></li>
+        <li><a href="./index.html">&lt;3</a></li>
         <li><a href="./desktop2.html">Сколько вместе</a></li>
         <li><a href="./desktop3.html">Наши фота</a></li>
         <li><a href="./desktop4.html">Письмо</a></li>
